antes de borrar DTOs de isiweek